# tachyon

./: .gitattributes  Cargo.toml  DYNAMIC_OPTIMIZATION.md  README.md  benchmark.mjs  index.d.ts  index.js  nano-benchmark.mjs  package.json  test-dynamic.mjs
.github/workflows/: CI.yml
__test__/: index.spec.ts
example/: main.ts
src/: lib.rs  server.rs  utils.rs
src/core/: methods.rs  mod.rs  request.rs  response.rs  router.rs  tachyon.rs  wrapper.rs
