
[package]
authors = ["AaronKing <aaron.cmfor@gmail.com>"]
edition = "2021"
name = "tachyon-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
napi = { version = "3", features = ["async"] }
napi-derive = "3.0.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
