
[package]
authors = ["AaronKing <aaron.cmfor@gmail.com>"]
edition = "2021"
name    = "tachyon-rs"
version = "0.0.5"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait    = "0.1.89"
bytes          = "1.10.1"
dashmap        = "6.1.0"
http-body-util = "0.1.3"
hyper          = { version = "1", features = ["full"] }
hyper-util     = { version = "0.1", features = ["full"] }
napi           = { version = "3", features = ["async", "serde-json", "napi4"] }
napi-derive    = "3.0.0"
once_cell      = "1.21.3"
serde          = "1.0.225"
serde_json     = "1.0.145"
tokio          = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
